--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>main</title>
   <link rel="stylesheet" href="pages/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,9 @@
   </header>
 
   <div class="bg-image"></div>
-
+  <div class="container">
+    <img class="welcome-image" src="pages/articles/img/26893-3-welcome-free-download.png" alt="">
+  </div>
   <footer class="footer">
     <div class="footer-text">&copy; KrisK</div>
   </footer>
