--- a/pages/articles.html
+++ b/pages/articles.html
@@ -28,39 +28,42 @@
 
   <div class="bg-image"></div>
   <div class="container">
-    <h1 class="container-title">Статьи</h1>
-    <div class="articles">
-      <h2><a class="articles-title" href="articles/mainecoon.html">Мейн-кун</a></h2>
-      <p class="articles-text">Мейн-ку́н (англ. Maine Coon) — порода кошек, которая произошла от кошек штата Мэн на
-        северо-востоке США.
-        Аборигенная порода кошек Северной Америки...
-        <a class="articles-link__more" href="articles/mainecoon.html">&gt;&gt;&gt; читать далее</a>
-      </p>
-      <p><a class="articles-link__comments" href="articles/mainecoon.html#comments">Перейти к коментариям</a></p>
-    </div>
+    <div class="container-content">
+      <h1 class="container-title">Статьи</h1>
+      <div class="articles">
+        <h2><a class="articles-title" href="articles/mainecoon.html">Мейн-кун</a></h2>
+        <p class="articles-text">Мейн-ку́н (англ. Maine Coon) — порода кошек, которая произошла от кошек штата Мэн на
+          северо-востоке США.
+          Аборигенная порода кошек Северной Америки...
+          <a class="articles-link__more" href="articles/mainecoon.html">&gt;&gt;&gt; читать далее</a>
+        </p>
+        <p><a class="articles-link__comments" href="articles/mainecoon.html#comments">Перейти к коментариям</a></p>
+      </div>
 
-    <hr>
+      <hr>
 
-    <div class="articles">
-      <h2><a class="articles-title" href="articles/hausy.html">Хауси</a></h2>
-      <p class="articles-text">Хауси (Шауси, Чаузи) (англ. Chausie) — новая порода кошек, которая была зарегистрирована
-        в 1995 году в реестре
-        ассоциации TICA.
-        Выведена скрещиванием домашней кошки Абиссинской породы с диким камышовым котом...
-        <a class="articles-link__more" href="articles/hausy.html">&gt;&gt;&gt; читать далее</a>
-      </p>
-      <p><a class="articles-link__comments" href="articles/hausy.html#comments">Перейти к коментариям</a></p>
-    </div>
+      <div class="articles">
+        <h2><a class="articles-title" href="articles/hausy.html">Хауси</a></h2>
+        <p class="articles-text">Хауси (Шауси, Чаузи) (англ. Chausie) — новая порода кошек, которая была
+          зарегистрирована
+          в 1995 году в реестре
+          ассоциации TICA.
+          Выведена скрещиванием домашней кошки Абиссинской породы с диким камышовым котом...
+          <a class="articles-link__more" href="articles/hausy.html">&gt;&gt;&gt; читать далее</a>
+        </p>
+        <p><a class="articles-link__comments" href="articles/hausy.html#comments">Перейти к коментариям</a></p>
+      </div>
 
-    <hr>
+      <hr>
 
-    <div class="articles">
-      <h2><a class="articles-title" href="articles/ragdoll.html">Регдолл</a></h2>
-      <p class="articles-text">Рэгдо́лл (англ. Ragdoll — «тряпичная кукла») — порода крупных полудлинношёрстных кошек.
-        Порода выведена в США в 1960-х годах заводчиком персидских кошек из Калифорнии Энн Бейкер...
-        <a class="articles-link__more" href="articles/ragdoll.html">&gt;&gt;&gt; читать далее</a>
-      </p>
-      <p><a class="articles-link__comments" href="articles/ragdoll.html#comments">Перейти к коментариям</a></p>
+      <div class="articles">
+        <h2><a class="articles-title" href="articles/ragdoll.html">Регдолл</a></h2>
+        <p class="articles-text">Рэгдо́лл (англ. Ragdoll — «тряпичная кукла») — порода крупных полудлинношёрстных кошек.
+          Порода выведена в США в 1960-х годах заводчиком персидских кошек из Калифорнии Энн Бейкер...
+          <a class="articles-link__more" href="articles/ragdoll.html">&gt;&gt;&gt; читать далее</a>
+        </p>
+        <p><a class="articles-link__comments" href="articles/ragdoll.html#comments">Перейти к коментариям</a></p>
+      </div>
     </div>
   </div>
 
