--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -29,41 +29,42 @@
   <div class="bg-image"></div>
 
   <div class="container">
+    <div class="container-content">
+      <h1 class="container-title">Каталог</h1>
 
-    <h1 class="container-title">Каталог</h1>
-
-    <ul class="container-catalog">
-      <li class="container-list">
-        <h2 class="container-list__item">Кошкам</h2>
-        <ul class="container-sublist">
-          <li>Корм</li>
-          <li class="container-sublist__new">Миски</li>
-        </ul>
-      </li>
-      <li class="container-list">
-        <h2 class="container-list__item">Собакам</h2>
-        <ul class="container-sublist">
-          <li>Корм</li>
-          <li>миски</li>
-        </ul>
-      </li>
-      <li class="container-list">
-        <h2 class="container-list__item">Аксессуары</h2>
-        <ul class="container-sublist">
-          <li class="container-sublist__new">Домики</li>
-          <li>Поводки и ошейники</li>
-        </ul>
-      </li>
-      <li class="container-list">
-        <h2 class="container-list__item">Посуда</h2>
-        <ul class="container-sublist">
-          <li>Кастрюли</li>
-          <li class="container-sublist__new">Чайники</li>
-          <li>Тарелки</li>
-          <li>Чашки</li>
-        </ul>
-      </li>
-    </ul>
+      <ul class="container-catalog">
+        <li class="container-list">
+          <h2 class="container-list__item">Кошкам</h2>
+          <ul class="container-sublist">
+            <li>Корм</li>
+            <li class="container-sublist__new">Миски</li>
+          </ul>
+        </li>
+        <li class="container-list">
+          <h2 class="container-list__item">Собакам</h2>
+          <ul class="container-sublist">
+            <li>Корм</li>
+            <li>Миски</li>
+          </ul>
+        </li>
+        <li class="container-list">
+          <h2 class="container-list__item">Аксессуары</h2>
+          <ul class="container-sublist">
+            <li class="container-sublist__new">Домики</li>
+            <li>Поводки и ошейники</li>
+          </ul>
+        </li>
+        <li class="container-list">
+          <h2 class="container-list__item">Посуда</h2>
+          <ul class="container-sublist">
+            <li>Кастрюли</li>
+            <li class="container-sublist__new">Чайники</li>
+            <li>Тарелки</li>
+            <li>Чашки</li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </div>
 
   <footer class="footer">
