--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -28,20 +28,40 @@
 
   <div class="bg-texture"></div>
   <div class="container">
-    <h1 class="container-title">Галерея</h1>
-    <div class="container-gallery">
-      <a href="articles/img/mainecoon.jpg" target="_blank"><img class="container-image" src="articles/img/mainecoon.jpg"
-          alt="мейн кун" width="300">mainecoon.jpg</a>
-    </div>
+    <div class="container-content">
+      <h1 class="container-title">Галерея</h1>
+      <ul class="container-gallery">
 
-    <div class="container-gallery">
-      <a href="articles/img/hausy.jpg" target="_blank"><img class="container-image" src="articles/img/hausy.jpg"
-          alt="хауси" width="300">hausy.jpg</a>
-    </div>
+        <li class="container-gallery__item">
+          <div>
+            <a href="articles/img/mainecoon.jpg" target="_blank">
+              <img class="container-gallery__image" src="articles/img/mainecoon.jpg" height="250" alt="мейн кун">
+            </a>
+          </div>
+          <div><a class="container-gallery__link" href="articles/img/mainecoon.jpg" target="_blank">mainecoon.jpg</a>
+          </div>
+        </li>
 
-    <div class="container-gallery">
-      <a href="articles/img/ragdoll.svg" target="_blank"><img class="container-image" src="articles/img/ragdoll.svg"
-          alt="регдолл" width="300">ragdoll.svg</a>
+        <li class="container-gallery__item">
+          <div>
+            <a href="articles/img/hausy.jpg" target="_blank">
+              <img class="container-gallery__image" src="articles/img/hausy.jpg" height="250" alt="хауси">
+            </a>
+          </div>
+          <div><a class="container-gallery__link" href="articles/img/hausy.jpg" target="_blank">hausy.jpg</a></div>
+        </li>
+
+
+        <li class="container-gallery__item">
+          <div>
+            <a href="articles/img/ragdoll.svg" target="_blank">
+              <img class="container-gallery__image" src="articles/img/ragdoll.svg" height="250" alt="регдолл">
+            </a>
+          </div>
+          <div><a class="container-gallery__link" href="articles/img/ragdoll.svg" target="_blank">ragdoll.svg</a></div>
+        </li>
+
+      </ul>
     </div>
   </div>
 
