--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
 
   <div class="bg-image"></div>
   <div class="container">
-    <img class="welcome-image" src="pages/articles/img/26893-3-welcome-free-download.png" alt="">
+    <div class="container-content">
+      <img class="welcome-image" src="pages/articles/img/26893-3-welcome-free-download.png" alt="">
+    </div>
   </div>
+
   <footer class="footer">
     <div class="footer-text">&copy; KrisK</div>
   </footer>
+
 </body>
 
 </html>
