--- a/index.html
+++ b/index.html
@@ -13,28 +13,40 @@
 </head>
 
 <body>
-
-  <header class="header">
-    <ul class="navbar-list">
-      <li><a class="navbar-link" href="index.html">Главная</a></li>
-      <li><a class="navbar-link" href="pages/articles.html">Статьи</a></li>
-      <li><a class="navbar-link" href="pages/catalog.html">Каталог</a></li>
-      <li><a class="navbar-link" href="pages/contacts.html">Контакты</a></li>
-      <li><a class="navbar-link" href="pages/gallery.html">Галерея</a></li>
-      <li><a class="navbar-link" href="pages/page-nav.html">Навигация</a></li>
-      <li><a class="navbar-link" href="pages/registration.html">Регистрация</a></li>
-    </ul>
-  </header>
-
+  <div class="container-header">
+    <header class="header">
+      <ul class="navbar-list">
+        <li><a class="navbar-link" href="index.html">Главная</a></li>
+        <li><a class="navbar-link" href="pages/articles.html">Статьи</a></li>
+        <li><a class="navbar-link" href="pages/catalog.html">Каталог</a></li>
+        <li><a class="navbar-link" href="pages/contacts.html">Контакты</a></li>
+        <li><a class="navbar-link" href="pages/gallery.html">Галерея</a></li>
+        <li><a class="navbar-link" href="pages/page-nav.html">Навигация</a></li>
+        <li><a class="navbar-link" href="pages/registration.html">Регистрация</a></li>
+        <li><a class="navbar-link" href="index.html">Главная</a></li>
+        <li><a class="navbar-link" href="pages/articles.html">Статьи</a></li>
+        <li><a class="navbar-link" href="pages/catalog.html">Каталог</a></li>
+        <li><a class="navbar-link" href="pages/contacts.html">Контакты</a></li>
+        <li><a class="navbar-link" href="pages/gallery.html">Галерея</a></li>
+        <li><a class="navbar-link" href="pages/page-nav.html">Навигация</a></li>
+        <li><a class="navbar-link" href="pages/registration.html">Регистрация</a></li>
+      </ul>
+    </header>
+  </div>
   <div class="bg-image"></div>
-  <div class="container">
+  <div class="container-main">
     <div class="container-content">
       <img class="welcome-image" src="pages/articles/img/26893-3-welcome-free-download.png" alt="">
     </div>
   </div>
 
   <footer class="footer">
-    <div class="footer-text">&copy; KrisK</div>
+    <div class="footer-text">&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy;
+      KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy;
+      KrisK&copy; KrisK&copy;
+      KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy;
+      KrisK&copy; KrisK&copy;
+      KrisK&copy; KrisK&copy; KrisK&copy; KrisK</div>
   </footer>
 
 </body>
