--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
         <li><a class="navbar-link" href="pages/gallery.html">Галерея</a></li>
         <li><a class="navbar-link" href="pages/page-nav.html">Навигация</a></li>
         <li><a class="navbar-link" href="pages/registration.html">Регистрация</a></li>
-        <li><a class="navbar-link" href="index.html">Главная</a></li>
-        <li><a class="navbar-link" href="pages/articles.html">Статьи</a></li>
-        <li><a class="navbar-link" href="pages/catalog.html">Каталог</a></li>
-        <li><a class="navbar-link" href="pages/contacts.html">Контакты</a></li>
-        <li><a class="navbar-link" href="pages/gallery.html">Галерея</a></li>
-        <li><a class="navbar-link" href="pages/page-nav.html">Навигация</a></li>
-        <li><a class="navbar-link" href="pages/registration.html">Регистрация</a></li>
       </ul>
     </header>
   </div>
@@ -41,12 +34,7 @@
   </div>
 
   <footer class="footer">
-    <div class="footer-text">&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy;
-      KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy;
-      KrisK&copy; KrisK&copy;
-      KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy; KrisK&copy;
-      KrisK&copy; KrisK&copy;
-      KrisK&copy; KrisK&copy; KrisK&copy; KrisK</div>
+    <div class="footer-text">&copy; KrisK</div>
   </footer>
 
 </body>
