--- a/pages/articles.html
+++ b/pages/articles.html
@@ -14,17 +14,19 @@
 
 <body>
 
-  <header class="header">
-    <ul class="navbar-list">
-      <li><a class="navbar-link" href="../index.html">Главная</a></li>
-      <li><a class="navbar-link" href="articles.html">Статьи</a></li>
-      <li><a class="navbar-link" href="catalog.html">Каталог</a></li>
-      <li><a class="navbar-link" href="contacts.html">Контакты</a></li>
-      <li><a class="navbar-link" href="gallery.html">Галерея</a></li>
-      <li><a class="navbar-link" href="page-nav.html">Навигация</a></li>
-      <li><a class="navbar-link" href="registration.html">Регистрация</a></li>
-    </ul>
-  </header>
+  <div class="container-header">
+    <header class="header">
+      <ul class="navbar-list">
+        <li><a class="navbar-link" href="../index.html">Главная</a></li>
+        <li><a class="navbar-link" href="articles.html">Статьи</a></li>
+        <li><a class="navbar-link" href="catalog.html">Каталог</a></li>
+        <li><a class="navbar-link" href="contacts.html">Контакты</a></li>
+        <li><a class="navbar-link" href="gallery.html">Галерея</a></li>
+        <li><a class="navbar-link" href="page-nav.html">Навигация</a></li>
+        <li><a class="navbar-link" href="registration.html">Регистрация</a></li>
+      </ul>
+    </header>
+  </div>
 
   <div class="bg-image"></div>
   <div class="container">
