--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </head>
 
 <body>
-  <div class="container-header">
-    <header class="header">
+
+  <header class="header">
+    <div class="container">
       <ul class="navbar-list">
         <li><a class="navbar-link" href="index.html">Главная</a></li>
         <li><a class="navbar-link" href="pages/articles.html">Статьи</a></li>
@@ -24,8 +25,9 @@
         <li><a class="navbar-link" href="pages/page-nav.html">Навигация</a></li>
         <li><a class="navbar-link" href="pages/registration.html">Регистрация</a></li>
       </ul>
-    </header>
-  </div>
+    </div>
+  </header>
+
   <div class="bg-image"></div>
   <div class="container-main">
     <div class="container-content">
