--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -14,8 +14,8 @@
 
 <body>
 
-  <div class="container-header">
-    <header class="header">
+  <header class="header">
+    <div class="container">
       <ul class="navbar-list">
         <li><a class="navbar-link" href="../index.html">Главная</a></li>
         <li><a class="navbar-link" href="articles.html">Статьи</a></li>
@@ -25,8 +25,8 @@
         <li><a class="navbar-link" href="page-nav.html">Навигация</a></li>
         <li><a class="navbar-link" href="registration.html">Регистрация</a></li>
       </ul>
-    </header>
-  </div>
+    </div>
+  </header>
 
   <div class="bg-texture"></div>
   <div class="container">
